fix: search filters with horizontal scroll

--- a/theme/less/specific/search.less
+++ b/theme/less/specific/search.less
@@ -10,18 +10,8 @@
             top: 0;
             z-index: 1;
             background: white;
-
-            padding: 0 @spacing-md;
-
-            margin-left: -@spacing-md;
-            margin-right: -@spacing-md;
-
             border-bottom: 1px solid @grey-200;
         }
-    }
-
-    .search-input {
-        flex-grow: 1;
     }
 
     // Nice filter icons gets filled blue when active
